--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.4",
     "@supabase/supabase-js": "^2.89.0",
+    "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
