--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "next": "16.1.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
