--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,8 @@
+
 {
   "compilerOptions": {
     "target": "ES2017",
+    "baseUrl": ".",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -23,12 +25,13 @@
     }
   },
   "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts",
-    "**/*.mts"
-  ],
+     "next-env.d.ts",
+     "**/*.ts",
+     "**/*.tsx",
+     ".next/types/**/*.ts",
+     ".next/dev/types/**/*.ts",
+    
+     "**/*.mts"
+, "src/components/projects/KnowledgeBaseSidebar.tsxaseSidebar.tsx"  ],
   "exclude": ["node_modules"]
 }
