--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.4",
     "@supabase/supabase-js": "^2.89.0",
+    "lucide-react": "^0.562.0",
     "next": "^15.5.9",
     "react": "19.2.3",
     "react-dom": "19.2.3",
