--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^15.5.9",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-dropzone": "^14.3.5",
     "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
